--- a/index.html
+++ b/index.html
@@ -106,5 +106,23 @@
         <button id="reiniciar-juego" class="boton-principal">Jugar de Nuevo</button>
     </div>
 </div>
+<!-- ================================== -->
+    <!-- === NUEVO: MODAL DE VICTORIA TEMPORAL CENTRADO === -->
+    <!-- ================================== -->
+    <div id="modal-victoria">
+        <div class="contenido-modal-victoria">
+            <div class="titulo-modal-victoria">🎉 ¡Secuencia correcta!</div>
+            <div class="descripcion-modal-victoria">¡Excelente trabajo! Has completado el Nivel <span id="nivel-completado-modal">X</span>.</div>
+            <!-- Reutilizar la clase del botón principal, pero con ID específico -->
+            <button id="boton-siguiente-modal" class="boton-principal">Nivel Siguiente &raquo;</button>
+        </div>
+    </div>
+    <!-- ================================== -->
+    <!-- === FIN MODAL DE VICTORIA TEMPORAL === -->
+    <!-- ================================== -->
+
+    <div id="pantalla-final" class="hidden">
+    <!-- ... (El resto de pantalla-final) ... -->
+    </div>
 </body>
 </html>
