--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Contenedor Principal del Juego -->
     <main id="juego-principal" class="hidden">
-        <h1>Secuencia Mágica</h1>
+        <h1 id="titulo-nivel">Secuencia Mágica</h1>
         <!-- INFO DEL JUEGO (Mejora Semántica con <ul>) -->
         <ul class="info-juego">
             <li>Nivel: <span id="nivel-actual">1</span>/<span id="total-niveles">3</span></li>
@@ -126,3 +126,4 @@
     </div>
 </body>
 </html>
+
